# OldNetPanzer

./: README.md
krom-svn1421/: SConstruct  netpanzer  netpanzer.desktop
krom-svn1421/Languages/: pt-br.po
krom-svn1421/Languages/.svn/: entries
krom-svn1421/cache/.svn/: entries
krom-svn1421/docs/.svn/: entries
krom-svn1421/maps/.svn/: entries
krom-svn1421/pics/.svn/: entries
krom-svn1421/powerups/.svn/: entries
krom-svn1421/scripts/.svn/: entries
krom-svn1421/sound/.svn/: entries
krom-svn1421/src/: .cvsignore
krom-svn1421/src/.svn/: dir-prop-base  entries
masterserver-0.2.9/: BUGS  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h.in  configure  configure.ac  masterserver.cfg.sample  neighbors.sample
masterserver-0.2.9/docs/: Makefile.am  Makefile.in  protocol.txt
masterserver-0.2.9/exampleclient/: HeartbeatThread.cpp  HeartbeatThread.hpp  InfoThread.cpp  InfoThread.hpp  Makefile.am  Makefile.in  Tokenizer.hpp  main.cpp
masterserver-0.2.9/src/: Config.cpp  Config.hpp  HeartbeatThread.cpp  HeartbeatThread.hpp  Log.cpp  Log.hpp  Makefile.am  Makefile.in  MasterServer.cpp  MasterServer.hpp  RequestThread.cpp  RequestThread.hpp  ServerInfo.hpp  SocketStream.hpp  Tokenizer.hpp  main.cpp
masterserver-0.2.9/src/iniparser/: Section.cpp  Section.hpp  Store.cpp  Store.hpp
netpanzer-0.8.5-Alpha1106/: stderr.txt
netpanzer-0.8.5-Alpha1106/scripts/: initialize.lua  servercommands.lua
netpanzer-linux-0.8.5-test-1/: netpanzer
pakbmpconv/: README  bmp2pak  pak2bmp
php-netpanzer-toolbox-0.8/: ChangeLog  README  TODO
php-netpanzer-toolbox-0.8/applications/: base.conf.php  gamebrowser.php  getflagimage.php  getimage.php  listmaps.php  parse.php
snapshot-svn-1407/: netpanzer  stderr.txt
snapshot-svn-1407/scripts/: servercommands.lua
snapshot-svn-1414/: netpanzer
snapshot-svn-1419/: netpanzer
snapshot-svn-1419/Languages/: fr.po  it.po
snapshot-svn-1419/scripts/: usercommands.lua
svn1341/: netpanzer
svn1341/cache/.svn/: entries
svn1341/maps/: Arena.npm  Arena.opt  Arena.spn  BattleArena(mod).npm  BattleArena(mod).opt  BattleArena(mod).spn  BattleArena.npm  BattleArena.opt  BattleArena.spn  Battlefield.npm  Battlefield.opt  ChampionChip.npm  ChampionChip.opt  ChampionChip.spn  Fantastic Four Team.npm  Fantastic Four Team.opt  Fantastic Four Team.spn  FightX.npm  FightX.opt  FightX.spn  Fightclub.npm  Masters.npm  Masters.opt  Two clans (mod-n).npm  Virus Wars.npm  Virus Wars.opt  Wall-3.npm  Wall-3.opt  Wall-3.spn  Warzone01.npm  Warzone01.opt  Warzone01.spn  Warzone02.npm  Warzone02.spn
(+489 files in other folders)
