AUTOMAKE_OPTIONS = foreign 1.7 dist-bzip2
SUBDIRS = src exampleclient docs
EXTRA_DIST = NEWS README TODO COPYING BUGS autogen.sh masterserver.cfg.sample neighbors.sample

configfiledir = $(sysconfdir)
configfile_DATA = masterserver.cfg.sample
cachedir = $(localstatedir)/cache/masterserver
cache_DATA = neighbors.sample
